# Olho-Cidadao

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  etl-config.toml  main.py  pipeline.py  pipeline_completo.py  pipeline_paralelo.py  pipeline_portal.py  pyproject.toml
apps/cidadao_de_olho/: .gitignore  Cargo.toml  README.md  package-lock.json
apps/cidadao_de_olho/assets/static/: 404.html
apps/cidadao_de_olho/config/: citizen_data.development.toml  citizen_data.production.toml  citizen_data.test.toml  citizen_ui.toml  development.yaml  glossario.toml  production.yaml  test.yaml  textos.toml
apps/cidadao_de_olho/src/: app.rs  lib.rs
apps/cidadao_de_olho/src/app/: app_name.rs  app_version.rs  boot.rs  connect_workers.rs  initializers.rs  mod.rs  register_tasks.rs  routes.rs
apps/cidadao_de_olho/src/config/: carregador.rs  citizen_data.rs  citizen_ui.rs  glossario.rs  mod.rs  textos.rs
apps/cidadao_de_olho/src/config/carregador/: caminho_config.rs  carregar_config_toml.rs  mod.rs  perfil_atual.rs  resolver_caminho_config_ambiente.rs
apps/cidadao_de_olho/src/config/citizen_data/: citizen_data_config.rs  citizen_data_limits.rs  citizen_data_paths.rs  mod.rs  resolve_relative.rs
apps/cidadao_de_olho/src/config/citizen_ui/: branding_config.rs  citizen_ui_config.rs  copy_config.rs  mod.rs
apps/cidadao_de_olho/src/config/textos/: mod.rs  textos_barra_superior.rs  textos_cobertura.rs  textos_compartilhados.rs  textos_config.rs  textos_estados.rs  textos_feed.rs  textos_glossario.rs  textos_rankings.rs  textos_visao_geral.rs
apps/cidadao_de_olho/src/controllers/: api.rs  mod.rs  site.rs
apps/cidadao_de_olho/src/controllers/api/: deserialize_refresh_flag.rs  health.rs  interface.rs  mod.rs  routes.rs  snapshot.rs  snapshot_query.rs
apps/cidadao_de_olho/src/controllers/site/: index.rs  load_index_html.rs  mod.rs  routes.rs
apps/cidadao_de_olho/src/services/: citizen_eye.rs  mod.rs
apps/cidadao_de_olho/src/services/citizen_eye/: cache.rs  dominio.rs  formatacao.rs  mod.rs  modelos.rs  montador.rs  repositorio.rs  servico.rs  singleton.rs
apps/cidadao_de_olho/tests/: mod.rs
apps/cidadao_de_olho/tests/api/: mod.rs  publica.rs
apps/cidadao_de_olho/tests/config/: arquivos.rs  mod.rs
apps/cidadao_de_olho/tests/requests/: home.rs
apps/cidadao_de_olho/tests/site/: publica.rs
apps/cidadao_de_olho/ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/cidadao_de_olho/ui/src/: App.tsx  main.tsx  styles.css  types.ts
apps/cidadao_de_olho/ui/src/components/: BlocoInfoFeed.tsx  FeedCard.tsx  LinhaRanking.tsx  RankingList.tsx
apps/cidadao_de_olho/ui/src/config/: montarAbasCobertura.ts  montarAbasFonte.ts  montarAbasRanking.ts  montarNavegacaoPrimaria.ts  runtime.ts  social.ts
apps/cidadao_de_olho/ui/src/hooks/: useSnapshotPublico.ts
apps/cidadao_de_olho/ui/src/lib/: buscarInterfacePublica.ts  buscarSnapshotPublico.ts  chaveFeed.ts  descricaoGrupoGlossario.ts  feed.ts  filtrarFeed.ts  format.ts  formatGeneratedAt.ts  interpolarTexto.ts  metricToneClass.ts  montarBarraSuperior.ts  montarCartoesCobertura.ts  montarCartoesDestaque.ts  montarLinhasRanking.ts  montarListaLeituraCurta.ts  montarMensagemErroHttpSnapshot.ts  montarMetricasHeroi.ts  montarModeloFeedCard.ts  montarModeloSecaoCobertura.ts  montarModeloSecaoFeed.ts  montarModeloSecaoGlossario.ts  montarModeloSecaoRankings.ts  montarModeloSecaoVisaoGeral.ts  montarNotasPainel.ts  montarPainelCarregamento.ts  montarPainelErro.ts  montarUrlApiPublica.ts  montarVisualPainelEstado.ts  (+1 more)
(+215 files in other folders)
