[workspace]

[package]
name = "cidadao_de_olho"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "cidadao_de_olho-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16", default-features = false }

[dependencies]
loco-rs = { workspace = true , features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
csv = { version = "1.4" }
chrono = { version = "0.4", features = ["clock", "serde"] }
toml = { version = "0.9" }
anyhow = { version = "1.0" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
axum-extra = { version = "0.10", features = ["form"] }

[[bin]]
name = "cidadao_de_olho-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
